# ChEMBL-affinity-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.tsx  index.css
demo/src/components/: AnimatedConnector.tsx  FlowNode.tsx  GraphNode.tsx  MLFlowchart.tsx  MoleculeNode.tsx  ProcessingNode.tsx
docs/: TESTING.md
examples/CHEMBL1075091/: CHEMBL1075091_metrics.json
examples/CHEMBL203/: CHEMBL203_metrics.json
notebooks/: #quick_inspect.py#  fingerprint_visualization.py  inspect_chembl.py  tanimoto_demo.py
notebooks/data/: CHEMBL1075091_activities.db  CHEMBL1075091_summary.json
scripts/: plot_metrics.py
src/: chembl_cache.py  chembl_client_utils.py  chembl_downloader.py  config.py  demo.py  features.py  inspect_chembl.py  local_chembl.py  pipeline.py  score_batch.py  score_single.py  score_smiles.py  scoring_utils.py
tests/: conftest.py  test_pipeline.py
